<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/GitHubApp.TextView.Headline.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/text_login_welcome"
        android:textAlignment="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/GitHubApp.Button.Accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_skip_login"
        style="@style/GitHubApp.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_skip" />

</LinearLayout>