<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/GitHubApp.TextView.Headline.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/dialog_title_sort_repositories" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_option_stars" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_forks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_option_forks" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_option_last_update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_submit"
            style="@style/GitHubApp.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/submit" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>